--- a/bricoscope/src/app/tab1/tab1.page.html
+++ b/bricoscope/src/app/tab1/tab1.page.html
@@ -1,17 +1,26 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
+    <ion-title>Capture & Import</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+<ion-content class="ion-padding">
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" class="ion-text-center">
+        <ion-button expand="block" (click)="importFromGallery()">
+          <ion-icon slot="start" name="images"></ion-icon>
+          Importer depuis la Galerie
+        </ion-button>
+        <p>Sélectionnez des images depuis la galerie de votre appareil.</p>
+      </ion-col>
+    </ion-row>
+    <ion-row *ngIf="selectedImage">
+      <ion-col size="12" class="ion-text-center">
+        <div>
+          <img [src]="selectedImage" alt="Selected Image" />
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
