Mise à jour des noms des tabs

--- a/bricoscope/src/app/tab1/tab1.page.html
+++ b/bricoscope/src/app/tab1/tab1.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Capture & Import</ion-title>
+    <ion-title>Enregistrer une image de la galerie</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -12,4 +12,5 @@
   <ion-item>
     <canvas id="canvasOutput"></canvas>
   </ion-item>
+  
 </ion-content>
