--- a/bricoscope/src/app/tab2/tab2.page.html
+++ b/bricoscope/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Capture Image
+      Enregistrer une image de la caméra
     </ion-title>
   </ion-toolbar>
 </ion-header>
