Ajout de l'API Firebase + Ajout du bouton de sauvegarde d'image sur le tab1 (wip)

--- a/bricoscope/src/app/tab1/tab1.page.html
+++ b/bricoscope/src/app/tab1/tab1.page.html
@@ -12,5 +12,9 @@
   <ion-item>
     <canvas id="canvasOutput"></canvas>
   </ion-item>
+
+  <ion-button expand="full" *ngIf="selectedImage">
+    Sauvegarder l'image
+  </ion-button>
   
 </ion-content>
