--- a/bricoscope/src/app/tab2/tab2.page.html
+++ b/bricoscope/src/app/tab2/tab2.page.html
@@ -8,29 +8,35 @@
 
 <ion-content>
 
+  <!-- Overlay pour le chargement -->
   <div class="loading-overlay" *ngIf="loading">
     <ion-spinner name="crescent"></ion-spinner>
   </div>
 
-  <div id="cameraPreview" class="cameraPreview"></div>
-  <div *ngIf="cameraActive && !loading">
-    
+  <!-- Zone de prévisualisation de la caméra -->
+  <div id="cameraPreview" class="camera-container"></div>
+
+  <!-- Boutons de contrôle de la caméra -->
+  <div *ngIf="cameraActive && !loading" class="controls">
     <ion-button (click)="stopCamera()" expand="block" id="close">
-      <ion-icon name="close-circle" slot=""icon-only></ion-icon>
+      <ion-icon name="close-circle" slot="icon-only"></ion-icon>
     </ion-button>
 
     <ion-button (click)="captureImage()" expand="block" id="capture">
-      <ion-icon name="camera" slot=""icon-only></ion-icon>
+      <ion-icon name="camera" slot="icon-only"></ion-icon>
     </ion-button>
 
     <ion-button (click)="flipCamera()" expand="block" id="flip">
-      <ion-icon name="camera-reverse" slot=""icon-only></ion-icon>
+      <ion-icon name="camera-reverse" slot="icon-only"></ion-icon>
     </ion-button>
   </div>
 
-
+  <!-- Affichage de l'image capturée -->
   <ion-img [src]="image" *ngIf="image && !cameraActive"></ion-img>
-  <ion-button (click)="openCamera()" expand="block" *ngIf="!cameraActive && !loading">Open Camera</ion-button>
-  <ion-button (click)="clearImage()" expand="block" *ngIf="image && !cameraActive">Clear Image</ion-button>
+
+  <!-- Boutons pour ouvrir la caméra et nettoyer l'image -->
+  <ion-button (click)="openCamera()" expand="block" *ngIf="!cameraActive && !loading">Ouvrir la caméra</ion-button>
+  <ion-button (click)="clearImage()" expand="block" *ngIf="image && !cameraActive">Effacer l'image</ion-button>
 
 </ion-content>
+
